# Basket-Fill-Automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sample-basket.json
app/: __init__.py  __main__.py  ai_reranker.py  basket_service.py  cli.py  config.py  db.py  decision.py  input_loader.py  models.py  normalize.py  retailer_search.py  scorer.py
docs/: architecture.md  runbook.md  scale-cost-strategy.md
sql/: schema.sql
tests/: test_ai_reranker.py  test_basket_service.py  test_cli.py  test_config.py  test_db.py  test_input_loader.py  test_matching_engine.py  test_models.py  test_retailer_search.py
